# narrate-this

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .env.example  basic.rs  local_tts.rs
src/: config.rs  error.rs  lib.rs  pipeline.rs  types.rs  util.rs
src/providers/: elevenlabs.rs  ffmpeg_renderer.rs  firecrawl.rs  fs_storage.rs  mod.rs  openai.rs  openai_tts.rs  pexels.rs  pg_cache.rs  stock_planner.rs
src/traits/: audio_storage.rs  cache.rs  content.rs  keyword_extractor.rs  media_planner.rs  media_search.rs  mod.rs  text_transformer.rs  tts.rs  video_renderer.rs
